Fix alignment issues in hero and second section
The main text area in hero was given a max-width so that it wouldn't
be able to increase past a point in order to retain the look that
the model assignment in cases where the window size is enlarged. Zombie
code from this section was also removed.

The text below the images in section two was also given a max width
so that it better suits the width of the image on top of it.

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,10 +42,8 @@ a, a:visited, a:hover, a:active {
 
 .main-text {
     flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    flex-grow: 1;
-
+    max-width: 400px;
+    margin-left: 2em;
 }
 
 .main-image img {
@@ -90,11 +88,47 @@ a, a:visited, a:hover, a:active {
 }
 
 .box-illustrations {
-    border: 5px solid red;
-    text-align: center;
+    padding-left: 2em;
+    padding-right: 2em;
+    padding-bottom: 1em;
 }
+
+.section2-title {
+    text-align: center;
+    color: #1F2937;
+    font-size: 36px;
+    font-weight: bolder;
+}
+
 
 .boxes {
     display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1em;
+    padding-right: 2em;
+    padding-left: 2em;
 }
 
+.boxes > * {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.box img {
+    border: 2px solid #3882F6;
+    height: 100px;
+    width: 100px;
+    border-radius: 10px;
+}
+
+.box .subtext {
+    flex-wrap: wrap;
+    text-align: center;
+    font-size: 18px;
+    max-width: 120px;
+    margin-right: 1em;
+    margin-left: 1em;
+}
